# invoice_sct

./: .gitignore  .gitleaks.toml  .root-docs-batch-update.toml  20260613_job_store_mcp_fix_plan.md  20260613_p2_gap_design.md  20260614_api_inventory_design_audit_v1.md  20260614_db_schema_swarm_scout.md  20260614_documentation_audit_swarm_scout.md  20260614_performance_optimization_plan_v1.md  20260614_robust_architecture_plan_swarm.md  20260615_FINAL_AUDIT_PACK_test_v1.xlsx  20260615_invoice_validation_process_report_v1.md  20260615_구현작업서_MarkItDown_GoogleVision_통합_v1.md  20260616_PROD_e2e_audit_pack_REVIEW_PACK_v1.xlsx  20260616_bottleneck_report.md  20260616_bottleneck_report_code_verification.md  20260616_pasted_dsv_final_validator_code_cross_verification.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  LAYOUT.md  README.md  SCNT HVDC DRAFT INVOICE FOR DOMESTIC DELIVERY MAY 2026.xlsx  SCNT HVDC DRAFT INVOICE FOR IMPORT SHIPMENTS MAY 2026 (1).xlsx  SCNT_HVDC_Domestic_Invoice_Audit_MAY2026_DN_LINK_LOCKED.backup_before_sn1_810_20260616_100149.xlsx  SCNT_HVDC_Domestic_Invoice_Audit_MAY2026_DN_LINK_LOCKED.xlsx  SYSTEM_ARCHITECTURE.md  architecture-contracts.json  gpts-gateway-test.md  package.json  patch_g.md  plan-20260614-notebooklm-pdf.md  plan-20260615-vision-normalizer-test.md  plan-20260616-cross-verified-remediation.md  plan-20260616-unresolved-items.md  plan.md  plan_mcp-vercel-inprocess.md  pnpm-lock.yaml  shpt_rate_match.md  (+5 more)
apps/worker-py/: .coverage  .dockerignore  Dockerfile  README.md  deploy-cloudrun.sh  fly.toml  make_fixture.py  pyproject.toml  smoke_parse.py
apps/worker-py/app/: __init__.py  db.py  main.py  schemas.py  telemetry.py
apps/worker-py/migrations/: 0001_initial.down.sql  0001_initial.sql
apps/worker-py/scripts/: markitdown_live_smoke.py  notebooklm_live_smoke.py  test_fixture.xlsx  workbook_contract_validate.py
apps/worker-py/tests/: gen_pdf_fixtures.py  sample-invoice.xlsx  test_audit_log.py  test_dsv_pdf_hybrid.py  test_dsv_waybill.py  test_export_route.py  test_health.py  test_main.py  (+22 more)
(+504 files in other folders)
