[project]
name = "invoice-audit-parser"
version = "0.1.0"
description = "Invoice audit parser worker (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openpyxl>=3.1",
    "pydantic>=2.9",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]
otel = [
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
